# NetSentry

./: .env.example  Dockerfile  LICENSE  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 02570df1b69f_device_enrichment.py  46c29940c3d3_initial.py  991b8fba38ca_device_alerts_enabled.py  b482706ff78e_availability.py  de0c75081e97_speedtest.py  e8a6efb57ac6_deco.py
docs/sdlc-studio/: trd.md
docs/sdlc-studio/epics/: EP0006-internet-speed-monitor.md
docs/sdlc-studio/stories/: US0001-docker-compose-stack-skeleton.md  US0002-python-project-scaffold.md  US0003-US0008-ep0001-remaining.md  US0016-US0021-ep0003-pfsense-adguard.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DeviceTable.tsx  EventFeed.tsx  SpeedChart.tsx  StatCard.tsx
frontend/src/hooks/: useDashboard.ts  useDashboardLayout.ts  useDevices.ts  useFirewallInterfaces.ts  useTheme.ts
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  DevicesPage.tsx  SettingsPage.tsx
frontend/src/test/: Dashboard.test.tsx  DeviceTable.test.tsx
frontend/src/types/: api.ts  react-grid-layout.d.ts
netsentry/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  pyproject.toml
netsentry/alembic/: script.py.mako
netsentry/api/: deps.py  main.py
netsentry/api/v1/: availability.py  dashboard.py  deco.py  devices.py  events.py  identification.py  notifications.py  pfsense.py  router.py  scan.py  speedtest.py
netsentry/core/: __init__.py  config.py  scheduler.py
netsentry/data/: manuf
netsentry/db/: base.py  connection.py  models.py  utils.py
netsentry/db/repositories/: __init__.py  (+4 more)
netsentry/events/: engine.py
netsentry/identification/: __init__.py  ai.py  categoriser.py  lifecycle.py  rules.py
netsentry/integrations/: __init__.py
netsentry/monitor/: monitor.py  ping.py  tracker.py
netsentry/notifications/: dispatcher.py  ntfy.py  registry.py  telegram.py
netsentry/scanner/: __init__.py  arp.py  icmp.py  mdns.py  models.py  netbios.py  orchestrator.py  os_detect.py  oui.py  profiles.py  ssdp.py  subnets.py  tcp.py  utils.py
netsentry/speedtest/: __init__.py  librespeed.py  models.py  ookla.py  runner.py  storage.py
netsentry/tests/: conftest.py
tests/: conftest.py
tests/unit/: test_adguard.py  test_availability.py  test_dashboard.py  test_db_schema.py  test_deco_client.py  test_deco_poller.py  test_device_api.py  test_health.py  test_identification.py  test_notifications.py  test_notifications_api.py  test_orchestrator.py  test_pfsense.py  test_repositories.py  test_scaffold.py  test_scanner_arp_icmp.py  test_scanner_tcp_mdns.py  test_speedtest.py
(+38 files in other folders)
