[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netsentry"
version = "0.1.0"
description = "Self-hosted network intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Database
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",  # Alembic requires SQLAlchemy for env.py
    # HTTP client
    "httpx>=0.27.0",
    # Task scheduling
    "APScheduler>=3.10.0",
    # SSH
    "apscheduler>=3.10.0,<4.0",
    # Network scanning
    "python-nmap>=0.7.1",
    "scapy>=2.5.0",
    "netifaces>=0.11.0",
    # Notifications
    "apprise>=1.9.0",
    # Crypto (for Deco AES/RSA)
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "httpx",           # TestClient
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "paramiko>=3.0.0",
    "types-paramiko",
]
ai = [
    "anthropic>=0.25.0",
]

[project.scripts]
netsentry = "netsentry.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["netsentry"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "B008",  # do not perform function calls in default arguments (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]  # Long lines acceptable in test files (mock patch strings)

[tool.ruff.lint.isort]
known-first-party = ["netsentry"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = [
    "scapy.*",
    "nmap.*",
    "apprise.*",
    "APScheduler.*",
]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=netsentry --cov-report=term-missing --cov-fail-under=80"

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["netsentry"]
omit = ["netsentry/api/main.py"]  # entry point; covered by integration tests
